client/src/plus/deep-dives/overview/index.scss
@use "sass:math";

@use "~@mdn/minimalist/sass/vars/layout";
@use "~@mdn/minimalist/sass/vars/typography";

@use "../../../ui/theme/index" as theme;

.page-content-container.plus {
  background-color: #fbfbfe;
  max-width: inherit;
  padding: 0;

  @media #{layout.$mq-tablet-and-up} {
    margin-top: 24px;
  }
}

.deep-dives-overview {
  background-color: theme.$white;
  font-family: theme.$inter-font-family;
  margin: 0 auto;
  max-width: 600px;

  &::before {
    background: linear-gradient(
        0deg,
        #fff 0%,
        hsla(0, 0%, 100%, 0.41) 21.05%,
        hsla(0, 0%, 100%, 0) 33.17%
      ),
      transparent url("./assets/deep-dive-hero.svg") center center no-repeat;
    background-size: cover;
    content: "";
    display: block;
    margin: auto;
    max-width: layout.$max-width-default;
    min-height: 212px;
    padding: (layout.$base-spacing * 2) layout.$base-spacing;
    position: relative;
    z-index: layout.$bottom-layer;
  }
}

.deep-dive-toc,
.overview-hero {
  a {
    &:link,
    &:visited {
      color: theme.$mdn-neutral900;
      text-decoration: none;
    }

    &:hover,
    &:focus {
      text-decoration: underline;
    }
  }
}

.overview-hero {
  padding: 0 layout.$base-spacing;

  @media #{layout.$mq-large-desktop-and-up} {
    margin: 36px auto layout.$base-spacing;
    max-width: layout.$max-width-default;
  }

  .header-content {
    margin-top: -36px;
    position: relative;
    z-index: layout.$top-layer;

    @media #{layout.$mq-small-desktop-and-up} {
      margin-top: -24px;
    }

    @media #{layout.$mq-large-desktop-and-up} {
      margin-top: -56px;
    }

    h1 {
      font-size: 36px;
      line-height: 100%;
    }
  }

  .author {
    font-size: 14px;
    font-weight: bold;
    line-height: 175%;
  }
}

.overview-content-container {
  padding: 0 layout.$base-spacing math.div(layout.$base-spacing, 2);

  h2,
  h3,
  button.ghost {
    font-family: theme.$inter-font-family;
  }

  h2 {
    font-size: 12px;
    font-style: normal;
    font-weight: bold;
    letter-spacing: 1.5px;
    line-height: 14px;
    margin-bottom: 16px;
    text-transform: uppercase;
  }

  h3 {
    font-size: 18px;
    margin: 16px 0;

    @media #{layout.$mq-small-desktop-and-up} {
      margin-top: 0;
    }
  }

  p {
    font-size: 14px;
    line-height: 175%;
  }

  button.ghost {
    color: theme.$mdn-neutral900;
    font-size: 14px;
    font-weight: bold;
    line-height: 175%;
    padding: 0;
    text-decoration: none;

    span {
      font-weight: normal;
    }
  }

  .show-contents-button {
    margin: 24px 0;

    &::before {
      background: transparent url("./assets/plus.svg") center center no-repeat;
      background-size: 18px;
      content: "";
      display: inline-block;
      height: 18px;
      margin-right: 8px;
      vertical-align: sub;
      width: 18px;
    }
  }

  a.overview-series-list-item {
    &:link,
    &:visited {
      color: theme.$mdn-neutral900;
    }
  }

  .series-item {
    border-top: 1px solid theme.$mdn-neutral100;
    padding: 24px 0 0;

    @media #{layout.$mq-small-desktop-and-up} {
      display: flex;
      gap: 24px;
    }

    &:last-child {
      border-bottom: 1px solid theme.$mdn-neutral100;
      padding: 24px 0;
    }

    &::before {
      border-radius: 4px;
      content: "";
      display: inline-block;
      height: 150px;
      margin-bottom: 8px;
      width: 100%;

      @media #{layout.$mq-small-desktop-and-up} {
        flex: 0 0 100px;
        height: 100px;
        margin-bottom: 0;
      }
    }
  }

  .series-item-content {
    flex: 1 1 70%;

    p {
      margin-bottom: 0;
    }
  }

  .planning-for-browser-support {
    &::before {
      background: transparent url("./assets/planning-for-browser-support.svg")
        center center no-repeat;
      background-size: cover;

      @media #{layout.$mq-small-desktop-and-up} {
        // background-size: 100%;
      }
    }
  }

  .your-browser-support-toolkit {
    &::before {
      background: transparent url("./assets/your-browser-support-toolkit.svg")
        41% 41% no-repeat;
      background-size: cover;
    }
  }

  .unavailable {
    color: theme.$mdn-neutral600;
    min-height: 140px;
    padding: math.div(layout.$base-spacing, 4);

    &::before {
      background: transparent url("./assets/unavailable0001.svg") 9% 9%
        no-repeat;
      background-size: cover;
      filter: saturate(0);
    }
  }
}

.deep-dive-toc {
  margin-bottom: math.div(layout.$base-spacing, 2);

  h4,
  li {
    border-left: 5px solid theme.$mdn-green500;
    font-family: theme.$inter-font-family;
    font-size: 14px;
    margin: 0;
    padding: 8px;
  }

  h4 {
    margin-top: 24px;
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }
}

